# bouncing-ball-sim

./: CMakeLists.txt  Readme.md
include/: config.h  core.h  gameobject.h  generator.h  gmath.h  io.h  physics.h  program.h  shader.h
include/components/: collider.h  physics.h  renderer.h  transform.h
include/systems/: collider.h  physics.h  renderer.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: gameobject.c  generator.c  gmath.c  io.c  main.c  physics.c  program.c  shader.c
src/components/: collider.c  physics.c  renderer.c  transform.c
src/systems/: collider.c  physics.c  renderer.c
